--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,8 @@ html {
 }
 
 body {
+	margin: 0;
+	padding: 0;
 	font-size: 62.5%;
 	background-color: #edefee;
 	height: 100vh;
@@ -19,119 +21,334 @@ body {
 	display: flex;
 	flex-direction: column;
 	height: 100%;
-	margin: 0 3rem;
-}
-
-header {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-color: #edefee;
-	color: #333;
-	padding: 1rem 0;
 	width: 100%;
 }
 
-header > img {
-	display: block;
-	margin: 1rem 1.5rem;
-	width: 5rem;
+.container .header_container {
+	width: 100%;
+	margin: auto;
+	height: auto;
 }
 
-header h1 {
+/* || Header Starts */
+.container .header_container .header_wrapper {
+	width: 100%;
+	max-width: 90%;
+	margin: auto;
+}
+
+.container .header_container .header_wrapper > div {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 3.5rem;
+	width: 100%;
+	height: auto;
+	padding: 2rem;
+	column-gap: 1rem;
+}
+
+.container .header_container .header_wrapper > div > img {
+	width: 6rem;
+	filter: drop-shadow(1px 1px 1px #333);
+}
+
+.container .header_container div > h1 {
+	text-align: center;
+	font-size: 4rem;
 	font-weight: 600;
-	letter-spacing: 0.6rem;
+	letter-spacing: 0.25rem;
 	text-transform: uppercase;
 	color: #26877f;
 	line-height: 1.1;
+	text-shadow: 2px 2px 5px #333;
+}
+/* || Header Ends */
+
+/* || Naigation Starts */
+.container .header_container .header_wrapper nav {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	margin: 1.5rem 0;
 }
 
-nav ul {
+.container .header_container .header_wrapper nav ul {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid #26877f;
+	width: auto;
+	padding: 1rem 0;
+	border-radius: 0.5rem;
 	text-align: center;
+	box-shadow: 1px 1px 5px #333;
 }
 
-nav li {
+.container .header_container nav ul li {
 	display: inline-block;
-	margin: auto 1rem;
-	font-size: 1.1rem;
-	border-bottom: 1px solid #333;
+	margin: 0 1rem;
 }
 
-nav li a {
-	color: #333;
+.container .header_container nav ul li a {
+	display: inline-block;
+	font-size: 1rem;
+	transition: transform 0.5s;
+	transition: 0.5s ease-in;
 }
 
-nav li a:hover {
+.container .header_container nav ul li a:link {
+	color: #26877f;
+	border-bottom: 1px solid #26877f;
+}
+
+.container .header_container nav ul li a:visited {
+	color: darkmagenta;
+	border-bottom: 1px solid darkmagenta;
+}
+
+.container .header_container nav ul li a:hover {
 	cursor: pointer;
-}
-
-h2 {
-	text-align: center;
-	font-size: 1.6rem;
+	transform: scale(1.1);
+	transition: 0.5s ease-out;
 	font-weight: 500;
-	margin: 1rem 0;
-	color: #333;
 }
 
-h3 {
-	text-align: center;
-	font-size: 1.3rem;
-	color: #333;
-	font-weight: 500;
-	margin: 1rem 0;
+.container .header_container nav ul li a:active {
+	font-weight: 900;
+	color: darkred;
+	border-bottom: 1px solid darkred;
 }
+/* || Naigation Ends */
 
-main {
+/* || Main Starts */
+.main_container {
 	width: 100%;
 	height: auto;
-	margin-top: 2rem;
+	padding: 2rem 0;
 }
 
-section {
+.main_container .main_section_wrapper {
 	display: flex;
+	width: 100%;
+	max-width: 75%;
+	margin: auto;
+}
+
+.main_container .main_section_wrapper .main_section_banner {
+	position: relative;
+	margin: auto;
+	height: auto;
+}
+
+.main_container
+	.main_section_wrapper
+	.main_section_banner
+	.main_section_image_container {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	border-radius: 2.5em;
+	width: 100%;
+	height: auto;
+	background: linear-gradient(to right, hsl(0, 0%, 0%), hsl(0, 0%, 88%));
+	box-shadow: 1px 1px 10px #333;
+}
+
+.main_container
+	.main_section_wrapper
+	.main_section_banner
+	.main_section_image_container
+	img {
+	align-content: center;
+	border-radius: 2.5em;
+	opacity: 0.5;
+}
+
+.main_container
+	.main_section_wrapper
+	.main_section_banner
+	.main_section_banner_promotion {
+	position: absolute;
+	top: 50%;
+	left: 35%;
+	width: auto;
+	height: auto;
+	transform: translate(-50%, -50%);
+	padding: 1rem;
+	border-radius: 0.5rem;
+}
+
+.main_container
+	.main_section_wrapper
+	.main_section_banner
+	.main_section_banner_promotion
+	> h2 {
+	color: #fff;
+	font-size: 2rem;
+	font-weight: 600;
+	text-align: left;
+	margin-bottom: 0.5rem;
+	text-shadow: 1px 1px 10px #333;
+	/* text-transform: uppercase; */
+}
+
+.main_container
+	.main_section_wrapper
+	.main_section_banner
+	.main_section_banner_promotion
+	> h2
+	strong {
+	color: #fff;
+	font-weight: 900;
+	font-size: 2rem;
+	padding: 0.05rem 0.5rem;
+	background-color: #26877f;
+	border: 1px solid #26877f;
+	border-radius: 0.5rem;
+	box-shadow: 1px 1px 10px #333;
+}
+
+.main_container
+	.main_section_wrapper
+	.main_section_banner
+	.main_section_banner_promotion
+	p {
+	color: #fff;
+	font-size: 1.2rem;
+	font-weight: 300;
+	line-height: 1.5;
+	word-wrap: normal;
+	margin-right: 5rem;
+	text-shadow: 2px 2px 10px #333;
+}
+
+.main_container
+	.main_section_wrapper
+	.main_section_banner
+	.main_section_banner_promotion
+	button {
+	display: block;
+	background-color: #26877f;
+	border: 1px solid #26877f;
+	font-size: 1.5rem;
+	padding: 0.5rem 1rem;
+	border-radius: 0.5rem;
+	margin-top: 1rem;
+	color: #fff;
+	box-shadow: 1px 1px 10px #333;
+}
+
+.main_container .main_section_article_container {
+	width: 100%;
+	height: auto;
+	padding: 1rem 0;
 	margin: 2rem 0;
 }
 
-article > p {
-	font-size: 1.1rem;
-	font-weight: 300;
+.main_container .main_section_article_container .main_section_article_wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 2rem 0;
+	width: 100%;
+	max-width: 75%;
+	width: 90%;
+	height: auto;
+	margin: auto;
 }
 
-article {
+.main_container
+	.main_section_article_container
+	.main_section_article_wrapper
+	article {
 	flex: 1;
+	border: 2px solid #26877f;
+	margin: 1rem 0.5rem;
+	padding: 1rem 1rem;
+	height: auto;
+	border-radius: 1rem;
+	box-shadow: 1px 1px 5px #333;
 }
 
+.main_container
+	.main_section_article_container
+	.main_section_article_wrapper
+	article
+	h3 {
+	font-size: 1.5rem;
+	font-weight: 400;
+	margin-bottom: 0.5rem;
+}
+
+.main_container
+	.main_section_article_container
+	.main_section_article_wrapper
+	article
+	p {
+	font-size: 1.2rem;
+	font-weight: 200;
+	line-height: 1.5;
+}
+/* || Main Ends */
+
+/* || Footer Starts */
 footer {
+	border: 1px solid #26877f;
 	flex-shrink: 0;
 	color: #fff;
-	padding: 0.5rem 0;
-	margin-top: auto;
+	padding: 1rem 0;
 	display: flex;
 	align-items: center;
 	background-color: #edefee;
 }
 
-footer div {
-	flex: 1;
+footer .footer_container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	max-width: 75%;
+	margin: auto;
 }
 
-footer div > img {
+footer .footer_container > div {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	column-gap: 0.5rem;
+}
+
+footer .footer_container > div p {
+	font-size: 1.2rem;
+	font-weight: 500;
+	color: #26877f;
+}
+
+footer .footer_container div > img {
 	width: 2rem;
+	filter: drop-shadow(0.5px 0.5px 1px #333);
 }
 
-footer .copyright {
+footer .footer_container .copyright {
 	display: flex;
 	justify-content: end;
 	align-items: left;
 }
 
-footer div > p {
+footer .footer_container .copyright > p {
 	font-size: 1rem;
-	font-weight: 300;
+	font-weight: 400;
 	font-style: italic;
-	color: #333;
+	color: #26877f;
 }
+
+footer .footer_container .copyright p span {
+	color: #26877f;
+	font-weight: 400;
+	font-style: italic;
+}
+
+/* || Footer Ends */
